--- a/src/pages/Services.module.css
+++ b/src/pages/Services.module.css
@@ -4,11 +4,12 @@
     color: #333;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   
   .heroSection {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     min-height: 100vh;
     overflow: hidden;
@@ -22,7 +23,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     z-index: 1;
@@ -34,7 +35,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: rgba(0,0,0,0.25);
     z-index: 2;
@@ -200,12 +201,13 @@
 }
 
 .mainContent {
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 60px;
 }
 
 .mainContent > section {
