--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -13,7 +13,7 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
   min-height: 72px;
   position: relative;
@@ -33,9 +33,9 @@
   flex: 1;
 }
 .navMenu {
-  margin-left: 600px;
+  margin-left: 0;
   margin-right: 0;
-  padding-right: 0;
+  padding-right: 48px;
 }
 .navMenu ul {
   display: flex;
