--- a/src/pages/Products.module.css
+++ b/src/pages/Products.module.css
@@ -47,7 +47,7 @@
   cursor: pointer;
 }
 .inputField {
-  width: 100%;
+  width: 80%;
   padding: 10px 12px;
   font-size: 16px;
   border-radius: 6px;
@@ -135,6 +135,15 @@
   50% { transform: translateY(18px); }
   70% { transform: translateY(12px); }
   100% { transform: translateY(0); }
+}
+.leaflet-tooltip.custom-tooltip {
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 14px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 }
 .heroTitle {
   font-size: 2.5rem;
