--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -969,7 +969,7 @@
 .whyCard h3 {
   font-size: 1.18rem;
   font-weight: 600;
-  color: #1565c0;
+  color: #183153;
   margin-bottom: 10px;
 }
 .whyCard p {
