--- a/src/pages/Services.module.css
+++ b/src/pages/Services.module.css
@@ -229,7 +229,7 @@
 
 /* Center images in sections */
 .mainContent img {
-  display: block;
+  /* display: block; */
   margin-left: auto;
   margin-right: auto;
 }
